--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name:Sailesh Kumar
+name: Sailesh Kumar
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Student at the University of Texas at Austin
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars3.githubusercontent.com/u/5958218?v=3&s=460
 
 #
 # Flags below are optional
