--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: CS371p Fall 2015: Sailesh Kumar
 description: Student at the University of Texas at Austin
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars3.githubusercontent.com/u/5958218?v=3&s=460
+avatar: https://scontent-dfw1-1.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11255762_10153350281612022_4993175902827365176_n.jpg?oh=3ce140c21ca8b9fe59955e5f18eb0eb9&oe=56646D69
 
 #
 # Flags below are optional
