--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: CS371p Fall 2015 Sailesh Kumar
+name: CS371p Fall 2015/: Sailesh Kumar
 
 # Short bio or description (displayed in the header)
 description: Student at the University of Texas at Austin
